// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly 1`] = `
<button
  className="btn btn-default"
  disabled={false}
  onClick={[MockFunction]}
>
  Button
</button>
`;

exports[`Button component should render correctly 2`] = `
<button
  className="btn btn-default btn-disabled"
  disabled={true}
  onClick={[MockFunction]}
>
  Button
</button>
`;
